cloud/aws-cloudformation/cf-ec2rdsdockerApp.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  DAppNodeEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: AWS-EC2-Key
      ImageId: ami-07b4156579ea1d7ba
      InstanceType: t2.micro
      Monitoring: false
      SecurityGroupIds:
        - !Ref DAppNodeSG
      UserData: !Base64 |
       #!/bin/bash
        apt-get update -qq
        apt-get install -y apt-transport-https ca-certificates
        apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
        echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" | tee /etc/apt/sources.list.d/docker.list
        apt-get update -qq
        apt-get purge lxc-docker || true
        apt-get -y install linux-image-extra-$(uname -r) linux-image-extra-virtual
        apt-get -y install docker-engine
        usermod -aG docker ubuntu
        mkdir -p /etc/systemd/system/docker.service.d
        printf "[Service]\nExecStart=\nExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375\n" >>  /etc/systemd/system/docker.service.d/docker.conf
        systemctl daemon-reload
        systemctl restart docker
      Tags:
        - Key: Name
          Value: DAppNodeEC2Instance
  DAppNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DockerApp-SecurityGroup
      GroupDescription: For instance that allows ssh, http and docker ports
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2375'
          ToPort: '2375'
          CidrIp: 0.0.0.0/0
